<resources>
    <string name="app_name">SiSuper-Apps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hello_blank_fragment">Hello World!</string>
    <string name="masuk">Masuk</string>
    <string name="tidak_punya_akun_buat_akun">Tidak punya akun? Buat akun</string>
    <string name="lupa_password">Lupa password</string>
    <string name="sudah_punya_akun_masuk">Sudah punya akun? Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>

    <!-- strings related to Bussiness -->
    <string name="nama_usaha">Nama Usaha</string>
    <string name="undangan">Undangan : </string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="label_detail_kegiatan">Detail Kegiatan</string>
    <string name="tanggal_waktu"><![CDATA[Tanggal & Waktu]]></string>
    <string name="lokasi">Lokasi</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="tambah_usaha">Tambah Usaha</string>
    <string name="omzet_pertahun">Omzet Pertahun</string>
    <string name="deskripsi_usaha">Deskripsi Usaha</string>
    <string name="alamat_usaha">Alamat Usaha</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="id_line">ID Line</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="lama_usaha">Lama Usaha</string>

    <!--Product Category-->
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <!--Product Category-->
    <string-array name="unitProduct">
        <item>Kilogram</item>
        <item>Pack</item>
        <item>Kodi</item>
        <item>RIM</item>
        <item>Pcs</item>
        <item>Lusin</item>
    </string-array>

    <!--notif test-->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="content_title">Content title</string>
    <string name="content_text">Content text</string>
    <string name="subtext">Sub text</string>
    <string name="channel_name">notif_test</string>
    <string name="tambahkan_ke_agenda">Tambahkan ke Agenda</string>
    <string name="hapus_agenda">Hapus dari Agenda</string>
</resources>
