<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorPurpleMedium"
    android:gravity="center_horizontal"
    tools:context=".activity.TambahUsahaActivity">




    <ScrollView
        android:id="@+id/add_usaha_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:id="@+id/logo_tambah_usaha"
                android:layout_width="200dp"
                android:layout_height="160dp"
                android:src="@drawable/logo"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/nama_tambah_usaha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_usaha"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/colorWhite"
                    android:theme="@style/InputWhiteLine" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/lama_tambah_usaha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lama_usaha"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberSigned"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/colorWhite"
                    android:theme="@style/InputWhiteLine" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/omzet_tambah_usaha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/omzet_pertahun"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/colorWhite"
                    android:theme="@style/InputWhiteLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/deskripsi_tambah_usaha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deskripsi_usaha"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine"
                    android:minLines="2"
                    android:maxLines="3"
                    android:scrollbars="vertical"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/colorWhite"
                    android:theme="@style/InputWhiteLine" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/alamat_tambah_usaha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat_usaha"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine"
                    android:minLines="2"
                    android:maxLines="3"
                    android:scrollbars="vertical"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/colorWhite"
                    android:theme="@style/InputWhiteLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/email_tambah_usaha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email Usaha"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/colorWhite"
                    android:theme="@style/InputWhiteLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/telepon_tambah_usaha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nomor Telepon Usaha"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/colorWhite"
                    android:theme="@style/InputWhiteLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/website_tambah_usaha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/website"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/colorWhite"
                    android:theme="@style/InputWhiteLine" />
            </android.support.design.widget.TextInputLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                >
                <TextView
                    android:id="@+id/SosmedUsaha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sosial Media Usaha"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textStyle="bold"
                    android:textSize="10pt"
                    />
                <LinearLayout
                    android:id="@+id/SosmedForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    app:layout_constraintTop_toBottomOf="@id/SosmedUsaha"
                    android:orientation="vertical"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                        android:textColorHint="@color/colorWhite">

                        <EditText
                            android:id="@+id/facebook_tambah_usaha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/facebook"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/colorWhite"
                            android:textColorLink="@color/colorWhite"
                            android:theme="@style/InputWhiteLine" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                        android:textColorHint="@color/colorWhite">

                        <EditText
                            android:id="@+id/twitter_tambah_usaha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/twitter"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/colorWhite"
                            android:textColorLink="@color/colorWhite"
                            android:theme="@style/InputWhiteLine" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                        android:textColorHint="@color/colorWhite">

                        <EditText
                            android:id="@+id/line_tambah_usaha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/id_line"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/colorWhite"
                            android:textColorLink="@color/colorWhite"
                            android:theme="@style/InputWhiteLine" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                        android:textColorHint="@color/colorWhite">

                        <EditText
                            android:id="@+id/instagram_tambah_usaha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/instagram"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/colorWhite"
                            android:textColorLink="@color/colorWhite"
                            android:theme="@style/InputWhiteLine" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <!--<TextView-->
                    <!--android:id="@+id/legalitas_usaha"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="Legalitas Usaha"-->
                    <!--android:textColor="@color/colorWhite"-->
                    <!--app:layout_constraintLeft_toLeftOf="parent"-->
                    <!--app:layout_constraintTop_toBottomOf="@id/SosmedForm"-->
                    <!--android:textStyle="bold"-->
                    <!--android:textSize="10pt"-->
                    <!--android:layout_marginTop="20dp"-->
                    <!--/>-->
                <!--<Button-->
                    <!--android:id="@+id/button_legalitas_usaha"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="40dp"-->
                    <!--android:text="Kartu Legalitas"-->
                    <!--app:layout_constraintTop_toBottomOf="@id/legalitas_usaha"-->
                    <!--/>-->
            </android.support.constraint.ConstraintLayout>


            <Button
                android:id="@+id/tambahUsaha"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPurpleDark"
                android:text="SIMPAN"
                android:textColor="@color/colorWhite"
                />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/edit_business_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"

        />
</android.support.constraint.ConstraintLayout>